Deletando imagens desnecessárias

--- a/tarot.html
+++ b/tarot.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background : url(freepik__adjust__51593.jpeg) center;
+      background : url(Arvore.jpeg) center;
       background-size: cover;
 
       color: goldenrod;
