Testando nova branch

--- a/tarot.html
+++ b/tarot.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Tarô Cabuloso</title>
+  <title>Tarot Cabuloso</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background : url(Arvore.jpeg) center;
       background-size: cover;
 
-      color: goldenrod;
+      color: golgidenrod;
       text-align: center;
       padding: 2rem;
     }
